[project]
name = "haoranwanximageedit"
description = "API plugin for Alibaba Cloud Wanx 2.1 Image Editing model. Supports 10 functions including stylization, inpainting, and outpainting."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-HaoranWanxImageEdit 依赖", "# 阿里云通义万相2.1图像编辑插件", "requests>=2.28.0", "Pillow>=9.0.0", "numpy>=1.21.0"]

[project.urls]
Repository = "https://github.com/GonDesign/ComfyUI-HaoranWanxImageEdit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GonDesign/ComfyUI-HaoranWanxImageEdit/wiki"
"Bug Tracker" = "https://github.com/GonDesign/ComfyUI-HaoranWanxImageEdit/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HaoranWanxImageEdit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

